# studio

./: .gitignore  Allocation.cs  Application.cs  AssemblyInfo.cs  DynamicIntegrator.cs  FunctionsDialog.cs  FunctionsView.cs  Graph.cs  Grid.cs  GroupProperties.cs  InterpolateDialog.cs  Loader.cs  Makefile.am  Makefile.include  MessageArea.cs  Monitor.cs  ObjectView.cs  PolynomialsView.cs  PropertyDialog.cs  PropertyView.cs  Range.cs  Saver.cs  Settings.cs  Simulation.cs  Stock.cs  Table.cs  Utils.cs  Window.cs  allocation.rb  app.desktop  application.rb  autogen.sh  c1.txt  cdn-studio.exe.config  cdn-studio.in  cdnstudio.csproj  cdnstudio.exe.config  cdnstudio.in  cdnstudio.make  cdnstudio.mdp  (+43 more)
Cdn.Studio/: Actions.cs  Allocation.cs  Anchor.cs  Application.cs  AssemblyInfo.cs  Config.cs.in  DynamicIntegrator.cs  RenderCache.cs  Settings.cs  Simulation.cs  SimulationRange.cs  Stock.cs  Utils.cs
Cdn.Studio.Clipboard/: Internal.cs
Cdn.Studio.Dialogs/: Editor.cs  FindTemplate.cs  Import.cs  Physics.cs  PlotSettings.cs  Plotting.cs  Property.cs  Variable.cs
Cdn.Studio.Renderers/: Box.cs  Edge.cs  Function.cs  Group.cs  Input.cs  Io.cs  Link.cs  Node.cs  NodeContainer.cs  Oscillator.cs  PiecewisePolynomial.cs  Renderer.cs  State.cs
Cdn.Studio.Resources/: plotting-ui.xml  ui.xml
Cdn.Studio.Serialization/: Project.cs
Cdn.Studio.Undo/: AddEdgeAction.cs  AddFunctionArgument.cs  AddFunctionPolynomialPiece.cs  AddGroup.cs  AddInterfaceProperty.cs  AddLinkAction.cs  AddNode.cs  AddObject.cs  AddProperty.cs  AddVariable.cs  ApplyTemplate.cs  AttachEdge.cs  AttachLink.cs  EdgeAction.cs  Function.cs  FunctionArgument.cs  FunctionPolynomialPiece.cs  Group.cs  IAction.cs  Import.cs  InterfaceProperty.cs  InterfaceVariable.cs  LinkAction.cs  Manager.cs  ModifyEdgeActionEquation.cs  ModifyEdgeActionTarget.cs  ModifyExpression.cs  ModifyFunctionArgumentDefaultValue.cs  ModifyFunctionArgumentExplicit.cs  ModifyFunctionArgumentName.cs  ModifyFunctionArguments.cs  ModifyFunctionPolynomialPieceBegin.cs  ModifyFunctionPolynomialPieceCoefficients.cs  ModifyFunctionPolynomialPieceEnd.cs  ModifyIntegrator.cs  ModifyLinkActionEquation.cs  ModifyLinkActionTarget.cs  ModifyObjectId.cs  ModifyProperty.cs  ModifyProxy.cs  (+17 more)
Cdn.Studio.Widgets/: AboutDialog.cs  AddRemovePopup.cs  Annotation.cs  GenericFunctionNode.cs  Grid.cs  IDragIcon.cs  MessageArea.cs  NodeStore.cs  Notebook.cs  Pathbar.cs  Progress.cs  ScrolledWindow.cs  Table.cs  TemplatesMenu.cs  TreeView.cs  Window.cs  WrappersTree.cs
Cdn.Studio.Widgets.Editors/: Edge.cs  Function.cs  Group.cs  Link.cs  Node.cs  Object.cs  PiecewisePolynomial.cs  Properties.cs  Variables.cs  Wrapper.cs
Cdn.Studio.Wrappers/: Edge.cs  Function.cs  FunctionPolynomial.cs  Graphical.cs  Group.cs  Import.cs  ImportAlias.cs  Input.cs  InputFile.cs  Link.cs  Network.cs  Node.cs  Object.cs  Wrapper.cs
Cpg.Studio/: Actions.cs  Allocation.cs  Anchor.cs  Application.cs  AssemblyInfo.cs  Directories.cs.in  FunctionsDialog.cs  FunctionsView.cs  Graph.cs  Grid.cs  GroupProperties.cs  InterpolateDialog.cs  MessageArea.cs  Monitor.cs  ObjectView.cs  Point.cs  PolynomialsView.cs  PropertyDialog.cs  PropertyView.cs  RenderCache.cs  Saver.cs  Settings.cs  Simulation.cs  SimulationRange.cs  Stock.cs  Utils.cs  Window.cs
Cpg.Studio.Clipboard/: Internal.cs
Cpg.Studio.Dialogs/: Editor.cs  FindTemplate.cs  Functions.cs  Import.cs  Interpolate.cs  Physics.cs  PlotSettings.cs  Plotting.cs  Property.cs
Cpg.Studio.Interpolators/: IInterpolator.cs  Interpolation.cs  PChip.cs
Cpg.Studio.Renderers/: Box.cs  Default.cs  Function.cs  Group.cs  Input.cs  Link.cs  Oscillator.cs  Renderer.cs  State.cs
Cpg.Studio.Resources/: monitor-ui.xml  plotting-ui.xml  ui.xml
Cpg.Studio.Serialization/: FunctionPolynomial.cs  Functions.cs  Group.cs  InputFile.cs  Link.cs  Loader.cs  Main.cs  Network.cs  Object.cs  Project.cs  Property.cs  Saver.cs  State.cs  Templates.cs
Cpg.Studio.Undo/: AddFunctionArgument.cs  AddFunctionPolynomialPiece.cs  AddGroup.cs  AddInterfaceProperty.cs  AddLinkAction.cs  AddObject.cs  AddProperty.cs  ApplyTemplate.cs  AttachLink.cs  Function.cs  FunctionArgument.cs  Group.cs  IAction.cs  Import.cs  InterfaceProperty.cs  LinkAction.cs  Manager.cs  ModifyExpression.cs  ModifyFunctionArguments.cs  ModifyFunctionPolynomialPieceBegin.cs  ModifyFunctionPolynomialPieceCoefficients.cs  ModifyFunctionPolynomialPieceEnd.cs  ModifyIntegrator.cs  ModifyLinkActionEquation.cs  ModifyLinkActionTarget.cs  ModifyObjectId.cs  ModifyProperty.cs  ModifyProxy.cs  MoveObject.cs  Object.cs  Property.cs  RemoveFunctionArgument.cs  RemoveFunctionPolynomialPiece.cs  RemoveInterfaceProperty.cs  RemoveLinkAction.cs  RemoveObject.cs  RemoveProperty.cs  Template.cs  UnapplyTemplate.cs  Ungroup.cs
Cpg.Studio.Widgets/: AboutDialog.cs  AddRemovePopup.cs  Annotation.cs  FunctionNode.cs  FunctionPolynomialNode.cs  FunctionPolynomialPieceNode.cs  FunctionsHelper.cs  FunctionsView.cs  GenericFunctionNode.cs  Graph.cs  Grid.cs  IDragIcon.cs  MessageArea.cs  Monitor.cs  NodeStore.cs  Notebook.cs  ObjectView.cs  Pathbar.cs  PolynomialsView.cs  Progress.cs  PropertyView.cs  ScrolledWindow.cs  Table.cs  TemplatesMenu.cs  TreeView.cs  Window.cs  WrappersTree.cs
Cpg.Studio.Widgets.Editors/: Function.cs  Link.cs  Object.cs  PiecewisePolynomial.cs  Properties.cs  Wrapper.cs
Cpg.Studio.Wrappers/: Function.cs  FunctionPolynomial.cs  Graphical.cs  Group.cs  Import.cs  Input.cs  InputFile.cs  Link.cs  Network.cs  Object.cs  State.cs  Wrapper.cs
components/: Globals.cs  Group.cs  Link.cs  Network.cs  Object.cs  PropertyAttribute.cs  Relay..cs  Relay.cs  Renderer.cs  Simulated.cs  State.cs  attachment.rb  gridobject.rb  group.rb  link.rb  relay.rb  sensor.rb  simulatedobject.rb  state.rb
data/: Makefile.am  cdn-studio.desktop  cdnstudio.desktop  cpgstudio.desktop
data/icons/: Makefile.am
debian/: cdn-studio.lintian-overrides  changelog  control  copyright  rules  watch
groups/: oscillator.rb
interpolators/: Interpolation.cs
m4/: Makefile.am
renderers/: Box.cs  Default.cs  Group.cs  Oscillator.cs  (+3 more)
(+20 files in other folders)
